--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@
   --bg-banner-color: #c4c4c4;
   --border-icon-color: #afb1b8;
   --footer-bg-icon: rgba(255, 255, 255, 0.1);
+  --footer-subscription-box-bg: #2f303a;
 
   --timing-funk: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -67,7 +68,8 @@ p {
 .partners-title,
 .features-accent,
 .team-people,
-.portfolio-sample {
+.portfolio-sample,
+.modal-title {
   color: var(--title-text-color);
 }
 
@@ -231,7 +233,6 @@ p {
 
   font-family: inherit;
   font-size: 16px;
-  text-align: center;
   cursor: pointer;
 }
 
@@ -277,20 +278,6 @@ p {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.modal-close-btn {
-  position: absolute;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: 8px;
-  right: 8px;
-  width: 30px;
-  height: 30px;
-  border-radius: 50%;
-  background-color: var(--primery-white-color);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
-}
 /* Секція особливості */
 
 .features-list {
@@ -684,6 +671,45 @@ p {
   background-color: var(--button-primery-bg-color);
 }
 
+/* Форма підписки  */
+
+.footer-subscription {
+  margin-left: auto;
+}
+
+.footer-subscription-item {
+  display: flex;
+  gap: 12px;
+}
+
+.footer-subscription-box {
+  padding: 15px 16px;
+  width: 358px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  background-color: var(--footer-subscription-box-bg);
+  border-radius: 4px;
+}
+
+.footer-subscription-btn {
+  display: flex;
+  gap: 10px;
+  align-items: center;
+  min-width: 200px;
+  max-height: 50px;
+  padding: 10px 28px;
+
+  background-color: var(--accent-color);
+  color: var(--primery-white-color);
+  fill: var(--primery-white-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.875em;
+  letter-spacing: 0.06em;
+}
+
 /* Модальне вікно */
 
 .backdrop {
@@ -696,6 +722,12 @@ p {
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
   transition: opacity 250ms var(--timing-funk), visibility 250ms var(--timing-funk);
+}
+
+.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
 
 .modal {
@@ -711,10 +743,186 @@ p {
   background-color: var(--primery-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  overflow-y: auto;
 }
 
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
+.modal-close-btn {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  background-color: var(--primery-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  cursor: pointer;
+
+  transition: fill 250ms var(--timing-funk);
+}
+
+.modal-close-btn:hover,
+.modal-close-btn:focus {
+  fill: var(--accent-color);
+}
+
+.modal-group {
+  padding: 40px;
+}
+
+.modal-title {
+  margin-bottom: 12px;
+
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15em;
+  text-align: center;
+  letter-spacing: 0.03em;
+}
+
+/* Модальні питання */
+
+.form-field-label {
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.16em;
+  letter-spacing: 0.01em;
+}
+
+.form-field-input {
+  height: 40px;
+  width: 100%;
+  padding: 0 12px 0 42px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  outline: none;
+  cursor: pointer;
+
+  transition: border-color 250ms var(--timing-funk);
+}
+
+.form-field-input:focus,
+.form-field-input:hover,
+.form-field-textarea:focus,
+.form-field-textarea:hover {
+  border-color: var(--accent-color);
+}
+
+.form-field-input:focus + .form-field-icon,
+.form-field-input:hover + .form-field-icon {
+  fill: var(--accent-color);
+}
+
+.form-field-textarea {
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  outline: none;
+  cursor: pointer;
+}
+
+.form-field-textarea::placeholder {
+  font-size: 12px;
+  line-height: 1.16em;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field-box {
+  position: relative;
+}
+
+.form-field-icon {
+  position: absolute;
+  top: 50%;
+  left: 12px;
+  transform: translateY(-50%);
+
+  transition: fill 250ms var(--timing-funk);
+}
+
+.modal-list {
+  margin-bottom: 20px;
+}
+
+.modal-item {
+  margin-bottom: 10px;
+}
+
+textarea {
+  resize: none;
+}
+
+.form-field-checkbox {
+  margin-bottom: 30px;
+}
+
+.checkbox {
+  display: flex;
+}
+
+.checkbox-input {
+  appearance: none;
+}
+
+.checkbox-icon {
+  position: absolute;
+  margin: 5px 7px 4px 0;
+  border: 2px solid var(--title-text-color);
+  border-radius: 2px;
+  fill: transparent;
+
+  transition: fill 250ms var(--timing-funk), background-color 250ms var(--timing-funk),
+    border-color 250ms var(--timing-funk);
+}
+
+.checkbox-input:checked + .checkbox-icon {
+  fill: var(--primery-white-color);
+  background-color: var(--accent-color);
+  border-color: var(--accent-color);
+}
+
+.checkbox-description {
+  position: relative;
+  padding-left: 23px;
+
+  font-size: 14px;
+  line-height: 1.71em;
+  letter-spacing: 0.03em;
+}
+
+.checkbox-policy {
+  color: var(--accent-color);
+}
+
+.form-field-btn {
+  display: block;
+  min-width: 200px;
+  min-height: 50px;
+  padding: 10px 52px;
+  margin: 0 auto;
+  font-weight: 700;
+  line-height: 1.875em;
+  letter-spacing: 0.06em;
+
+  background-color: var(--accent-color);
+  color: var(--primery-white-color);
+
+  transition: border-color 250ms var(--timing-funk), box-shadow 250ms var(--timing-funk);
+}
+
+.form-field-btn:hover,
+.form-field-btn:focus {
+  background-color: var(--button-bg-active-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
